--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-three/rapier": "^2.1.0",
     "animejs": "^4.0.2",
     "framer-motion": "^12.23.3",
+    "gsap": "^3.13.0",
     "meshline": "^3.3.1",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
