--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.2.0",
     "@react-three/rapier": "^2.1.0",
+    "animate-ui": "^0.0.4",
     "animejs": "^4.0.2",
     "framer-motion": "^12.23.3",
     "gsap": "^3.13.0",
@@ -20,6 +21,7 @@
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.3",
     "three": "^0.178.0"
   },
