--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-github-calendar": "^4.5.9",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.3",
     "three": "^0.178.0"
