--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-github-calendar": "^4.5.9",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-player": "^3.2.0",
     "react-router-dom": "^7.6.3",
     "three": "^0.178.0"
   },
